Fix horizontal mobile layout

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -230,23 +230,24 @@ h1 b {
     .profile-container {
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         justify-content: center;
         align-content: center;
-        width: 100%;
+        width: 90%;
     }
     
     .profile-picture {
-        margin: 0;
+        margin-left: auto;
         margin-top: auto;
         margin-bottom: auto;
+        text-align: right;
         width: 8rem;
-        height: 8rem;;
+        height: 8rem;
     }
 
     .about-me {
-        max-width: 500px;
-        margin-left: 3rem;
+        max-width: 450px;
+        margin-left: 0rem;
         display: flex;
         align-items: flex-start;
         flex-direction: column;
@@ -256,21 +257,40 @@ h1 b {
         margin-bottom: auto;
     }
 
+    .about-me p {
+        text-align: left;
+        max-width: 420px;
+    }
+
     .about-me h1, p {
         margin-left: 0;
         margin-right: 0;
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 0;
+        margin-bottom: 0;
     }
 
     .about-me h1 {
         font-size: 1.7rem;
+        margin-bottom: 0.1rem;
     }
 
     .about-me p {
-        font-size: 1rem;
+        font-size: 0.95rem;
+    }
+
+    .about-me span {
+        display: inline-block;
     }
 
     .social-links {
+        margin: 0;
         margin-top: 1rem;
-        margin-left: 0;
+    }
+
+    #contact {
+        display: inline;
+        margin-left: 0.8rem;
     }
 }
