Update OpenGraph properties

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,8 @@
 <meta property="og:title" content="{% if page.title %}{{ page.title }} | {{site.title}}{% else %}{{ site.title }}{% endif %}">
 <meta property="og:description" content="{{ site.description }}">
 <meta property="og:type" content="{% if page.ogtype %}{{ page.ogtype }}{% else %}website{% endif %}">
-<meta property="og:url" content="{% if page.ogurl %}{{ page.ogurl }}{% else %}https://thomasvarnish.co.uk/{% endif %}">
-<meta property="og:image" content="{% if page.ogimage %}{{ page.ogimage }}{% else %}https://thomasvarnish.co.uk/assets/profile.png{% endif %}">
+<meta property="og:url" content="{% if page.ogurl %}{{ page.ogurl }}{% else %}https://www.thomasvarnish.co.uk/{% endif %}">
+<meta property="og:image" content="{% if page.ogimage %}{{ page.ogimage }}{% else %}https://www.thomasvarnish.co.uk/assets/profile-square.jpg{% endif %}">
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@{{ site.author.twitter }}">
