--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -274,6 +274,14 @@ h1 b {
     /* .page-links-home span:last-of-type a {
         padding-bottom: 4rem;
     } */
+
+    .not-found {
+        text-align: center;
+    }
+
+    .not-found p {
+        text-align: center !important;
+    }
 }
 
 /* MEDIA: MOBILE (HORIZONTAL) */
@@ -355,4 +363,52 @@ h1 b {
         margin: 0;
         margin-top: 1.5rem;
     }
+}
+
+.not-found {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.not-found p {
+    margin-bottom: 0em;
+}
+
+.not-found a {
+    color: #666;
+    text-decoration: none;
+
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    text-align: left;
+
+    font-size: 17px;
+    line-height: 20px;
+}
+
+.not-found div {
+    margin-top: 1em;
+}
+
+.not-found a:hover {
+    border-bottom: #666 1px solid;
+}
+
+.not-found a:visited {
+    color: #666;
+}
+
+#not-found-heading {
+    color: #666;
+    margin-bottom: 0.5em;
+}
+
+.not-found p:last-of-type {
+    margin-top: 0.5em;
+}
+
+.not-found p i {
+    font-style: italic;
 }
