--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,26 +2,26 @@
 <html lang="en">
     <head>
         {% include head.html %}
-        <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css" type="text/css">
-        <link rel="stylesheet" href="{{ site.url }}/assets/css/post.css" type="text/css">
+        <link rel="stylesheet" href="/assets/css/main.css" type="text/css">
+        <link rel="stylesheet" href="/assets/css/post.css" type="text/css">
     </head>
 <body>
     <div class="container">
         <nav>
             <span id="site-link-mobile"><a href="{{ site.url }}">Thomas Varnish</a></span>
-            <span><a href="{{ site.url }}/blog/"><i class="fas fa-angle-left"></i> BLOG</a></span>
+            <span><a href="/blog/"><i class="fas fa-angle-left"></i> BLOG</a></span>
         </nav>
 
         <div class="content-container">
             <div class="sidebar">
-                <img class="profile-picture" src="{{ site.url }}/assets/profile.png" alt="Profile picture"/>
+                <img class="profile-picture" src="/assets/profile.png" alt="Profile picture"/>
                 <p>
                     <span id="main-tagline"><b>Thomas Varnish</b></span>
                     <span id="site-link"><a href="{{ site.url }}">thomasvarnish.co.uk</a></span>
                 </p>
                 <p id="page-links">
                     {% for page in site.sitepages %}
-                        <span><a href="{{ site.url }}/{{ page.url }}">{{ page.label }}</a></span>
+                        <span><a href="/{{ page.url }}">{{ page.label }}</a></span>
                     {% endfor %}
                 </p>
                 <div class="social-links">
@@ -52,7 +52,7 @@
 
         <div class="mobile-footer">
             <div class="footer-profile-container">
-                <img id="footer-profile-picture" src="{{ site.url }}/assets/profile.png" alt="Profile picture"/>
+                <img id="footer-profile-picture" src="/assets/profile.png" alt="Profile picture"/>
             </div>
             <div class="footer-text-container">
                 <p>
