Fix further issues with HTTPS links (homepage)
Remove {{ site.url }} when referring to the homepage and replace with /
to avoid any HTTPS certificate errors.

--- a/_layouts/bloghome.html
+++ b/_layouts/bloghome.html
@@ -7,8 +7,8 @@
 <body>
     <div class="container">
         <nav>
-            <span id="site-link-mobile"><a href="{{ site.url }}">Thomas Varnish</a></span>
-            <span><a href="{{ site.url }}"><i class="fas fa-angle-left"></i> HOME</a></span>
+            <span id="site-link-mobile"><a href="/">Thomas Varnish</a></span>
+            <span><a href="/"><i class="fas fa-angle-left"></i> HOME</a></span>
         </nav>
 
         <div class="content-container">
@@ -16,7 +16,7 @@
                 <img class="profile-picture" src="/assets/profile.png" alt="Profile picture"/>
                 <p>
                     <span id="main-tagline"><b>Thomas Varnish</b></span>
-                    <span id="site-link"><a href="{{ site.url }}">thomasvarnish.co.uk</a></span>
+                    <span id="site-link"><a href="/">thomasvarnish.co.uk</a></span>
                 </p>
                 <p id="page-links">
                     {% for page in site.sitepages %}
@@ -75,7 +75,7 @@
             <div class="footer-text-container">
                 <p>
                     <span id="main-tagline"><b>Thomas Varnish</b></span>
-                    <span id="site-link"><a href="{{ site.url }}">thomasvarnish.co.uk</a></span>
+                    <span id="site-link"><a href="/">thomasvarnish.co.uk</a></span>
                 </p>
                 <div class="social-links">
                     {% if site.author.youtube %}
