--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <nav>
-            <span id="site-link-mobile"><a href="{{ site.url }}">Thomas Varnish</a></span>
+            <span id="site-link-mobile"><a href="/">Thomas Varnish</a></span>
             <span><a href="/blog/"><i class="fas fa-angle-left"></i> BLOG</a></span>
         </nav>
 
@@ -17,7 +17,7 @@
                 <img class="profile-picture" src="/assets/profile.png" alt="Profile picture"/>
                 <p>
                     <span id="main-tagline"><b>Thomas Varnish</b></span>
-                    <span id="site-link"><a href="{{ site.url }}">thomasvarnish.co.uk</a></span>
+                    <span id="site-link"><a href="/">thomasvarnish.co.uk</a></span>
                 </p>
                 <p id="page-links">
                     {% for page in site.sitepages %}
@@ -57,7 +57,7 @@
             <div class="footer-text-container">
                 <p>
                     <span id="main-tagline"><b>Thomas Varnish</b></span>
-                    <span id="site-link"><a href="{{ site.url }}">thomasvarnish.co.uk</a></span>
+                    <span id="site-link"><a href="/">thomasvarnish.co.uk</a></span>
                 </p>
                 <div class="social-links">
                     {% if site.author.youtube %}
