--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,8 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
 
+{% if page.enable_maths %}
+<!-- LaTeX Support (MathJax) -->
 <script type="text/javascript" async
 	src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML">
 </script>
@@ -41,3 +43,4 @@
      "SVG": { linebreaks: { automatic: true } }
    });
 </script>
+{% endif %}
