Force IP anonymisation with Google Analytics
Make sure IP addresses are anonymised prior to Google Analytics data
being sent. An IP address of xxx.xxx.xxx.xxx will be "anonymised" to
xxx.xxx.xxx.0 and the user will not be able to be identified.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,5 +52,6 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-170028119-1');
+  // Anonymise the user's IP address! (Strip final 3 digits --> xxx.xxx.xxx.0)
+  gtag('config', 'UA-170028119-1', {'anonymize_ip': true});
 </script>
