--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,6 +56,7 @@ h6 {
     width: 65%;
     margin: auto;
     min-width: 300px;
+    max-width: 1000px;
     /* display: flex;
     flex-wrap: wrap;
 
