--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,8 @@ nav {
     margin: auto;
     margin-bottom: 1.5rem;
     margin-top: 2.5rem;
-    margin-left: -15%;
+    /* margin-left: -15%; */
+    margin-left: -7%;
     display: flex;
     justify-content: space-between;
 }
@@ -137,7 +138,8 @@ nav a:hover {
     flex-direction: column;
     flex-wrap: nowrap;
     text-align: center;
-    margin-left: -15%;
+    /* margin-left: -15%; */
+    margin-left: -7%;
 }
 
 .mobile-footer {
