Add horizontal line beneath nav on mobile
Adds a light gray horizontal line beneath the navigation bar when the
site is displayed on mobile (easier to distinguish between page content
and the navigation bar).

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,6 +82,7 @@ nav {
     margin-left: -7%;
     display: flex;
     justify-content: space-between;
+    padding-bottom: 1em;
 }
 
 #site-link-mobile {
@@ -306,6 +307,9 @@ ul {
 
     nav {
         margin-top: 1.5rem;
+
+        /* Line below nav for mobile */
+        border-bottom: #CCC 1px solid;
     }
 
     .mobile-footer {
