--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,9 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
 
+<!-- Mobile Drop-down Menu -->
+<link rel="stylesheet" href="/assets/css/mobile-menu.css"/>
+
 {% if page.enable_maths %}
 <!-- LaTeX Support (MathJax) -->
 <script type="text/javascript" async
