--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,13 +79,14 @@ h6 {
     display: flex;
     flex-wrap: wrap;
     padding-bottom: 6rem;
+    margin-top: 1.5rem;
 }
 
 nav {
     width: 100%;
     text-align: right;
     margin: auto;
-    margin-bottom: 1.5rem;
+    /* margin-bottom: 1.5rem; */
     margin-top: 2.5rem;
     /* margin-left: -15%; */
     margin-left: -7%;
@@ -96,12 +97,14 @@ nav {
 
 #site-link-mobile {
     visibility: hidden;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 @media (max-width: 1200px) {
     nav {
         margin: auto;
-        margin-bottom: 1.5rem;
+        /* margin-bottom: 1.5rem; */
         margin-top: 2.5rem;
     }
 }
@@ -165,6 +168,12 @@ nav a:hover {
 
     #page-links a {
         font-size: 0.9em;
+    }
+
+    nav {
+        visibility: hidden;
+        max-height: 0px;
+        padding: 0px;
     }
 }
 
