--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,10 @@
     <head>
         {% include head.html %}
         <link rel="stylesheet" href="/assets/css/main.css" type="text/css">
+
+        {% if page.cv %}
+        <link rel="stylesheet" href="/assets/css/cv.css" type="text/css">
+        {% endif %}
     </head>
 <body>
     <div class="container">
