Correct drop-down menu link colour

--- a/assets/css/mobile-menu.css
+++ b/assets/css/mobile-menu.css
@@ -67,6 +67,7 @@ mouse over it (hover) */
     background-color: #EEE;
     display: block;
     text-decoration: none;
+    color: black;
 }
 
 .mobile-site-link:visited {
