--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,6 +48,10 @@
                     {% if site.author.linkedin %}
                     <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}" alt="LinkedIn" title="LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                     {% endif %}
+
+                    {% if site.author.orcid %}
+                    <a href="https://orcid.org/{{ site.author.orcid }}" alt="ORCID iD" title="ORCID iD"><i class="fab fa-orcid"></i></i></a>
+                    {% endif %}
                 </div>
             </div>
             <div class="content">
@@ -82,6 +86,10 @@
                 
                     {% if site.author.linkedin %}
                     <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}" alt="LinkedIn" title="LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                    {% endif %}
+
+                    {% if site.author.orcid %}
+                    <a href="https://orcid.org/{{ site.author.orcid }}" alt="ORCID iD" title="ORCID iD"><i class="fab fa-orcid"></i></i></a>
                     {% endif %}
                 </div>
             </div>
