--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -164,7 +164,7 @@ h1 b {
 #contact {
     display: inline-block;
     height: 1rem;
-    width: 10rem;
+    /* width: 10rem; */
     margin: auto;
     padding-bottom: 0.05rem;
     padding-left: 0.2rem;
