--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -34,6 +34,10 @@ html, body {
     justify-content: center;
 }
 
+.about-me span i {
+    font-style: italic;
+}
+
 .page-links-home {
     /* font-family: 'Source Sans Pro', sans-serif; */
     /* font-weight: 400; */
