--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
 <meta name="author" content="Thomas Varnish">
 
 <!-- SEO (OpenGraph and Twitter Cards) -->
-<meta name="keywords" content="thomas, varnish, personal, website, physics, physicist, astrophysics, astrophysicist, astronomy, student, imperial, college, space, maker">
+<meta name="keywords" content="thomas, varnish, personal, website, physics, physicist, astrophysics, astrophysicist, astronomy, student, imperial, college, space, maker, mit, massachusetts, plasma, puffin, herschel, nuclear, psfc">
 <meta property="og:title" content="{% if page.title %}{{ page.title }} | {{site.title}}{% else %}{{ site.title }}{% endif %}">
 <meta property="og:description" content="{{ site.description }}">
 <meta property="og:type" content="{% if page.ogtype %}{{ page.ogtype }}{% else %}website{% endif %}">
