Update profile picture

--- a/_layouts/bloghome.html
+++ b/_layouts/bloghome.html
@@ -21,7 +21,7 @@
 
         <div class="content-container">
             <div class="sidebar">
-                <img class="profile-picture" src="/assets/profile.png" alt="Profile picture"/>
+                <img class="profile-picture" src="/assets/profile.jpg" alt="Profile picture"/>
                 <p>
                     <span id="main-tagline"><b>Thomas Varnish</b></span>
                     <span id="site-link"><a href="/">thomasvarnish.co.uk</a></span>
