--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@
 
         <div class="content-container">
             <div class="sidebar">
-                <img class="profile-picture" src="/assets/profile.png" alt="Profile picture"/>
+                <img class="profile-picture" src="/assets/profile.jpg" alt="Profile picture"/>
                 <p>
                     <span id="main-tagline"><b>Thomas Varnish</b></span>
                     <span id="site-link"><a href="/">thomasvarnish.co.uk</a></span>
@@ -64,7 +64,7 @@
 
         <div class="mobile-footer">
             <div class="footer-profile-container">
-                <img id="footer-profile-picture" src="/assets/profile.png" alt="Profile picture"/>
+                <img id="footer-profile-picture" src="/assets/profile.jpg" alt="Profile picture"/>
             </div>
             <div class="footer-text-container">
                 <p>
