Update about and replace homepage

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,6 +35,7 @@ h1 {
 
 #page-title {
     margin-top: 0rem;
+    margin-bottom: 1rem;
 }
 
 h2 {
@@ -79,7 +80,6 @@ h6 {
     display: flex;
     flex-wrap: wrap;
     padding-bottom: 6rem;
-    margin-top: 1.5rem;
 }
 
 nav {
