Add MAIZE image to homepage

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -495,3 +495,12 @@ em {
     color: #666;
     text-decoration: underline;
 }
+
+.content img {
+    width: 90%;
+    text-align: center;
+    margin: auto;
+    display: block;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+}
