--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -496,7 +496,21 @@ em {
     text-decoration: underline;
 }
 
-.content img {
+/* .content img {
+    width: 90%;
+    text-align: center;
+    margin: auto;
+    display: block;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+} */
+
+.post-image {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+.post-image img {
     width: 90%;
     text-align: center;
     margin: auto;
