--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,8 +22,12 @@ body {
     /* font-weight: 400; */
     /* font-size: 17px; */
 
-    font-family: "Roboto", sans-serif;
-    font-weight: 200;
+    /* font-family: "Roboto", sans-serif; */
+    /* font-weight: 200; */
+    /* font-size: 18px; */
+
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
     font-size: 18px;
     
     text-align: left;
@@ -34,7 +38,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Roboto";
+    font-family: "Poppins";
     font-weight: 800;
     color: rgba(0, 0, 0, 0.9);
 }
@@ -125,7 +129,7 @@ nav a {
     text-decoration: none;
     color: #666;
     font-weight: 300;
-    font-family: "Roboto", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 nav a:visited {
@@ -248,7 +252,7 @@ nav a:hover {
 }
 
 #main-tagline {
-    font-family: "Roboto", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 20px;
     font-weight: 300;
 }
@@ -261,12 +265,13 @@ nav a:hover {
 
 .content p {
     margin-bottom: 1rem;
-    line-height: 1.7rem;
+    line-height: 1.8rem;
+    text-align: justify;
 }
 
 .content p a {
     color: #E67E22;
-    font-weight: 800;
+    font-weight: 700;
     text-decoration: none;
     /* TODO: Create a more consistent colour scheme! */
 }
