Update about page content

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -518,6 +518,16 @@ em {
     padding-bottom: 0.75rem;
 }
 
+.post-image p {
+    color: #666;
+    font-size: 15px;
+    font-style: italic;
+    max-width: 80%;
+    min-width: 200px;
+    text-align: center;
+    margin: auto;
+}
+
 .publications-list i {
     font-style: italic;
 }
