Fix page title format

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 {% if page.page_title %}
-<title>{{ page.page_title }} | {{ site.title }}</title>
+<title>{{ page.page_title }}</title>
 {% elsif page.title %}
 <title>{{ page.title }} | {{ site.title }}</title>
 {% else %}
