Add contact page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,10 @@
         {% if page.cv %}
         <link rel="stylesheet" href="/assets/css/cv.css" type="text/css">
         {% endif %}
+
+        {% if page.contact %}
+        <link rel="stylesheet" href="/assets/css/contact.css" type="text/css">
+        {% endif %}
     </head>
 <body>
     <div class="container">
